testsuite/tests/partial-sigs/should_fail/WildcardInTypeSynonymLHS.hs
{-# LANGUAGE PartialTypeSignatures #-}
module WildcardInTypeSynonymLHS where

type Foo _ = Int
