testsuite/tests/partial-sigs/should_fail/WildcardInTypeSynonymLHS.stderr

WildcardInTypeSynonymLHS.hs:4:10: error: [GHC-77878]
    Unexpected type ‘_’
    In the type declaration for ‘Foo’
    A type declaration should have form
      type Foo a = ...
